--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -1,14 +1,69 @@
-<!DOCTYPE html>
-<html lang=en>
-<head>
-    <meta charset=UTF-8>
-    <title></title>
-    <link href=/dist/static/css/app.c2b7d2d90bc8a6d6cb912ce39162e3e1.css rel=stylesheet>
-</head>
-<body>
-<div id=app></div>
-<script type=text/javascript src=/dist/static/js/manifest.5022e78f49511650b501.js></script>
-<script type=text/javascript src=/dist/static/js/vendor.0fc7742c85794d0411f8.js></script>
-<script type=text/javascript src=/dist/static/js/app.96ed6876f74c1d0836d3.js></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><title></title><link rel=stylesheet href=/static/libs/bower_components/editor.md/css/editormd.min.css><link href=/dist/static/css/app.dbf44cf2b523f9dc63090763d154501e.css rel=stylesheet></head><body><div id=app></div><script src=/static/libs/bower_components/editor.md/lib/raphael.min.js></script><script src=/static/libs/bower_components/editor.md/examples/js/sea.js></script><script type=text/javascript>seajs.config({
+    base  : "/static/libs/bower_components/editor.md/examples",
+    alias : {
+      jquery   : "/static/libs/bower_components/editor.md/examples/js/jquery.min",
+      editormd : "/static/libs/bower_components/editor.md/editormd"
+    }
+  });
+
+  //seajs.use("./js/seajs-main"); //使用main.js时 editormd 路径要改为 "../../editormd"
+
+  var deps = [
+    "jquery",
+    "editormd",
+    "/static/libs/bower_components/editor.md/languages/en",
+    "/static/libs/bower_components/editor.md/plugins/link-dialog/link-dialog",
+    "/static/libs/bower_components/editor.md/plugins/reference-link-dialog/reference-link-dialog",
+    "/static/libs/bower_components/editor.md/plugins/image-dialog/image-dialog",
+    "/static/libs/bower_components/editor.md/plugins/code-block-dialog/code-block-dialog",
+    "/static/libs/bower_components/editor.md/plugins/table-dialog/table-dialog",
+    "/static/libs/bower_components/editor.md/plugins/emoji-dialog/emoji-dialog",
+    "/static/libs/bower_components/editor.md/plugins/goto-line-dialog/goto-line-dialog",
+    "/static/libs/bower_components/editor.md/plugins/help-dialog/help-dialog",
+    "/static/libs/bower_components/editor.md/plugins/html-entities-dialog/html-entities-dialog",
+    "/static/libs/bower_components/editor.md/plugins/preformatted-text-dialog/preformatted-text-dialog"
+  ];
+
+  seajs.use(deps, function($, editormd) {
+    var testEditor;
+
+    $.get("/static/libs/bower_components/editor.md/examples/test.md", function(md){
+      testEditor = editormd("test-editormd", {
+        width: "90%",
+        height: 640,
+        path : '/static/libs/bower_components/editor.md/lib/',
+        markdown : md,
+        //toolbar  : false,             // 关闭工具栏
+        codeFold : true,
+        searchReplace : true,
+        saveHTMLToTextarea : true,      // 保存 HTML 到 Textarea
+        htmlDecode : "style,script,iframe|on*",            // 开启 HTML 标签解析，为了安全性，默认不开启
+        emoji : true,
+        taskList : true,
+        tocm            : true,          // Using [TOCM]
+        tex : true,                      // 开启科学公式 TeX 语言支持，默认关闭
+        //previewCodeHighlight : false,  // 关闭预览窗口的代码高亮，默认开启
+        flowChart : true,                // 疑似 Sea.js与 Raphael.js 有冲突，必须先加载 Raphael.js ，Editor.md 才能在 Sea.js 下正常进行；
+        sequenceDiagram : true,          // 同上
+        //dialogLockScreen : false,      // 设置弹出层对话框不锁屏，全局通用，默认为 true
+        //dialogShowMask : false,     // 设置弹出层对话框显示透明遮罩层，全局通用，默认为 true
+        //dialogDraggable : false,    // 设置弹出层对话框不可拖动，全局通用，默认为 true
+        //dialogMaskOpacity : 0.4,    // 设置透明遮罩层的透明度，全局通用，默认值为 0.1
+        //dialogMaskBgColor : "#000", // 设置透明遮罩层的背景颜色，全局通用，默认为 #fff
+        imageUpload : true,
+        imageFormats : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+        imageUploadURL : "./php/upload.php",
+        onload : function() {
+          console.log('onload', this);
+          //this.fullscreen();
+          //this.unwatch();
+          //this.watch().fullscreen();
+
+          //this.setMarkdown("#PHP");
+          //this.width("100%");
+          //this.height(480);
+          //this.resize("100%", 640);
+        }
+      });
+    });
+  });</script><script type=text/javascript src=/dist/static/js/manifest.fc148007bbb8aad0d1a2.js></script><script type=text/javascript src=/dist/static/js/vendor.fe325de53025194287c1.js></script><script type=text/javascript src=/dist/static/js/app.216efd42c6430eb0361e.js></script></body></html>
